// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState shows gettingStarted state 1`] = `
<div>
  <!---->
   
  <gl-empty-state-stub
    contentclass=""
    description="Stay updated about the performance and health of your environment by configuring Prometheus to monitor your deployments."
    invertindarkmode="true"
    primarybuttonlink="/clustersPath"
    primarybuttontext="Install on clusters"
    secondarybuttonlink="/settingsPath"
    secondarybuttontext="Configure existing installation"
    svgpath="/path/to/getting-started.svg"
    title="Get started with performance monitoring"
  />
</div>
`;

exports[`EmptyState shows noData state 1`] = `
<div>
  <!---->
   
  <gl-empty-state-stub
    contentclass=""
    description="You are connected to the Prometheus server, but there is currently no data to display."
    invertindarkmode="true"
    primarybuttonlink="/settingsPath"
    primarybuttontext="Configure Prometheus"
    secondarybuttonlink=""
    secondarybuttontext=""
    svgpath="/path/to/no-data.svg"
    title="No data found"
  />
</div>
`;

exports[`EmptyState shows unableToConnect state 1`] = `
<div>
  <!---->
   
  <gl-empty-state-stub
    contentclass=""
    description="Ensure connectivity is available from the GitLab server to the Prometheus server"
    invertindarkmode="true"
    primarybuttonlink="/documentationPath"
    primarybuttontext="View documentation"
    secondarybuttonlink="/settingsPath"
    secondarybuttontext="Configure Prometheus"
    svgpath="/path/to/unable-to-connect.svg"
    title="Unable to connect to Prometheus server"
  />
</div>
`;
